syntax = "proto3";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

import "common.proto";

service WebContentService {
  rpc checkIsImageUrl(StringRequest) returns (IsImageUrl);
}

message IsImageUrl {
  Metadata metadata = 1;
  bool is_image = 2;
  string url = 3;
}
